syntax = "proto3";

package proto;
option go_package = "github.com/isard-vdi/isard/desktop-builder/pkg/proto";

service DesktopBuilder {
    rpc XMLGet(XMLGetRequest) returns (XMLGetResponse) {}
    rpc ViewerGet(ViewerGetRequest) returns (ViewerGetResponse) {}
}

message XMLGetRequest {
    string id = 1;
}

message XMLGetResponse {
    string xml = 1;
}

message ViewerGetRequest {
    string xml = 1;
}

message ViewerGetResponse {
    message Spice {
        string pwd = 1;
        int32 port = 2;
        int32 tls_port = 3;        
    }
    message Vnc {
        string pwd = 1;
        int32 port = 2; 
        int32 websocket_port = 4;      
    }

    repeated Spice spice = 2;
    repeated Vnc vnc = 3;
}